# GuessTheWord

./: .gitignore  CMakeLists.txt  consts.h  dialogs.h  eventHandler.h  eventHandlers.h  fields.h  game.h  headers.h  main.cpp  smth.h
ui/: project.glade
